# cpp_serializer

./: .gitignore  CMakeLists.txt  readme.md
examples/: ClassA.h  ClassB.h  test.h
generated_serializers/: Usuario_serialization_impl.h
src/: CodeGenerator.cpp  FileWalker.cpp  Parser.cpp  TypeChecker.cpp  Utils.cpp  main.cpp
src/include/: ClassInfo.h  CodeGenerator.h  FileWalker.h  Macro.h  Parser.h  TypeChecker.h  Utils.h
